# justact-rs

./: Cargo.toml  README.md  justact_impl_changes.md
src/: actions.rs  actors.rs  agents.rs  agreements.rs  auxillary.rs  collections.rs  iter.rs  lib.rs  messages.rs  policies.rs  policy.rs  runtime.rs  set.rs  sets.rs  statements.rs  times.rs
src/collections/: map.rs  mod.rs  set.rs
