[package]
name = "justact"
version = "1.0.0"
edition = "2021"
authors = ["Tim Müller"]
repository = "https://github.com/Lut99/justact-rs"
description = "Implements the core framework part of the JustAct framework. For more details, see [1]."


[dependencies]
# bytemuck = { version = "1.20.0", features = ["derive"], optional = true }
# nohash-hasher = "0.2.0"
# parking_lot = { version = "0.12.3", optional = true }
serde = { version = "1.0.215", features = ["derive"], optional = true }


[features]
default = []

# bytemuck = ["dep:bytemuck"]
# parking_lot = ["dep:parking_lot"]
serde = ["dep:serde"]
