[package]
name = "justact"
version = "2.0.0"
edition = "2021"
authors = ["Tim Müller"]
repository = "https://github.com/Lut99/justact-rs"
description = "Implements the core framework part of the JustAct framework. For more details, see [1]."


[dependencies]
chrono = { version = "0.4.0", optional = true }
serde = { version = "1.0.0", features = ["derive"], optional = true }

auto-traits = { git = "https://github.com/Lut99/auto-traits-rs" }


[features]
default = []

chrono = ["dep:chrono"]
# parking_lot = ["dep:parking_lot"]
serde = ["dep:serde"]
